--- a/frontend/assets/css/estilos.css
+++ b/frontend/assets/css/estilos.css
@@ -1,37 +1,53 @@
 body {
-    background: #ffdc43;
-    color: #4a4a4a;
-    text-shadow: 0px 0px 1px black;
-    font-family: sans-serif;
-    text-align: center;
-    padding: 40px 100px;
-    
-  }
-  
-  h1{
-      font-style: italic;
-  }
-  td, th{
-      vertical-align: middle!important;
-  }
-  td div{
-      background-size: cover;
-      width: 60px;
-      height: 60px;
-  }
-  
-  tbody tr:nth-child(1) td div{
-          background-image: url("/tony.jpg");
-  }
-  
-  tbody tr:nth-child(2) td div{
-      background-image: url("/Evelien.jpg");
-  }
-  
-  tbody tr:nth-child(3) td div{
-      background-image: url("/Danny.jpg");
-  }
-  
-  input{
-      text-align: center;
-  }
+  background: #ffdc43;
+  color: #4a4a4a;
+  text-shadow: 0px 0px 1px black;
+  font-family: sans-serif;
+  text-align: center;
+  padding: 40px 100px;
+}
+
+h1 {
+  font-style: italic;
+}
+td,
+th {
+  vertical-align: middle !important;
+}
+td div {
+  background-size: cover;
+  width: 60px;
+  height: 60px;
+}
+
+input {
+  text-align: center;
+}
+
+.info {
+  background: #f9f9f9;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px 0;
+}
+
+.error {
+  background: #e34b4b;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px 0;
+  color: rgb(255, 255, 255);
+}
+
+.form-error-span {
+  color: red;
+  font-size: 10px;
+}
+
+.img-list-users {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: 10px;
+  object-fit: cover;
+}
